# app.js
@@ -9,6 +9,7 @@ app.use(bodyParser.json());
 app.use('/questions', require('./routers/questions'));
 app.use('/answers', require('./routers/answers'));
 app.use('/users', require('./routers/users'));
+app.use('/login', require('./routers/login'));
 
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
