# models/user.js
@@ -3,6 +3,8 @@ var Schema = mongoose.Schema;
 
 var userSchema = new Schema({
     seq: Number,
+    email: String,
+    password: String,
     accessKey: String
 });
 
